# backend/src/routes/managementApi.ts
@@ -33,8 +33,8 @@ export function applyManagementRoutes(parentRouter: Router) {
         body('primaryExaminer._id').isMongoId(),
         body('secondaryExaminer._id').optional().isMongoId(),
         body('date').isISO8601(),
-        body('reviewParameters.startDate').optional({nullable: true}).isISO8601(),
-        body('reviewParameters.endDate').optional({nullable: true}).isISO8601(),
+        body('reviewParameters.startDate').isISO8601(),
+        body('reviewParameters.endDate').isISO8601(),
         body('reviewParameters.showDownloadButton').isBoolean(),
         body('reviewParameters.showTextLayer').isBoolean(),
         enforceValidity,
@@ -48,8 +48,8 @@ export function applyManagementRoutes(parentRouter: Router) {
         body('primaryExaminer._id').isMongoId(),
         body('secondaryExaminer._id').optional().isMongoId(),
         body('date').isISO8601(),
-        body('reviewParameters.startDate').optional({nullable: true}).isISO8601(),
-        body('reviewParameters.endDate').optional({nullable: true}).isISO8601(),
+        body('reviewParameters.startDate').isISO8601(),
+        body('reviewParameters.endDate').isISO8601(),
         body('reviewParameters.showDownloadButton').isBoolean(),
         body('reviewParameters.showTextLayer').isBoolean(),
         enforceValidity,
@@ -74,6 +74,7 @@ export function applyManagementRoutes(parentRouter: Router) {
         multer().array('files', config.limits.maxFilesPerAnswerSheet as number),
         param('id').isMongoId(),
         body('studentId').isNumeric(),
+        body('fileOverwrite').isBoolean(),
         enforceValidity,
         addAnswerSheet
     );
